# CapgoServer

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: list_release.rs  main.rs  update_info.rs
src/api/: live_update.rs  mod.rs  stats.rs
