[package]
name = "CapgoServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poem = "1"
poem-openapi = { version = "2", features = ["swagger-ui"]}
reqwest = { version = "0.11.15", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
